<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:descendantFocusability="afterDescendants">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/activity_horizontal_margin"
        android:focusable="true"
        android:focusableInTouchMode="true"
        tools:context="ru.asoloveva.netcalc.MainActivity">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/ipTextInputEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:digits="0123456789."
                android:hint="@string/ip_address"/>
        </android.support.design.widget.TextInputLayout>

        <TextView
            style="@style/HeadText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mask" />

        <Spinner
            android:id="@+id/maskSpinner"
            style="@style/PlaneText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/maskTextView"
            style="@style/PlaneText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:paddingRight="16dp" />

        <SeekBar
            android:id="@+id/maskSeekBar"
            style="@style/PlaneText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="32" />

        <TextView
            style="@style/HeadText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cidr_notation" />

        <TextView
            android:id="@+id/cidrTextView"
            style="@style/PlaneText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            style="@style/HeadText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wc_mask" />

        <TextView
            android:id="@+id/wcMaskTextView"
            style="@style/PlaneText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            style="@style/HeadText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/max_address" />

        <TextView
            android:id="@+id/maxAddTextView"
            style="@style/PlaneText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            style="@style/HeadText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/address_range" />

        <TextView
            android:id="@+id/addRangeTextView"
            style="@style/PlaneText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>


</ScrollView>
